tests/spec/emit/snapshots/interface_private_method_keyword_escape.snap
---
source: tests/spec/emit/types.rs
description: "input: \nimport \"go:fmt\"\n\ninterface Worker {\n  fn range(self) -> int\n}\n\nstruct S {\n  value: int,\n}\n\nimpl S {\n  fn range(self) -> int { self.value }\n}\n\nfn main() {\n  let s = S { value: 3 }\n  let w: Worker = s\n  fmt.Println(w.range())\n}\n"
---
package main

import "fmt"

type Worker interface {
	range_() int
}

type S struct {
	value int
}

func (s S) range_() int {
	return s.value
}

func main() {
	s := S{value: 3}
	var w Worker = s
	fmt.Println(w.range_())
}
