tests/spec/emit/snapshots/interface_self_param_stripped.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Greetable {
    fn greet(self) -> string;
    fn name(self) -> string;
    fn reset(self);
  }
---
package main

type Greetable interface {
	greet() string
	name() string
	reset()
}
