tests/spec/emit/snapshots/interface_to_interface_does_not_synthesize_adapter.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:io"
  
  fn narrow(rwc: io.ReadWriteCloser) -> io.Reader {
    rwc
  }
  
  fn main() {
    let _ = narrow
  }
---
package main

import "io"

func narrow(rwc io.ReadWriteCloser) io.Reader {
	return rwc
}

func main() {
	_ = narrow
}
