tests/spec/emit/snapshots/interface_with_generics.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:fmt"
  
  interface Container<T> {
    fn get() -> T;
    fn set(value: T);
  }
  
  fn test() {
    fmt.Print("Generic interface")
  }
---
package main

import "fmt"

type Container[T any] interface {
	get() T
	set(T)
}

func test() {
	fmt.Print("Generic interface")
}
