tests/spec/emit/snapshots/interop_address_of_go_function_value.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let r = &strconv.Atoi
    let _ = r
  }
---
package main

import "strconv"

func main() {
	ref := strconv.Atoi
	r := &ref
	_ = r
}
