tests/spec/emit/snapshots/interop_address_of_method_value.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  struct S {}
  
  impl S {
    fn inc(self) -> int { 1 }
  }
  
  fn main() {
    let s = S {}
    let r = &s.inc
    let _ = r
  }
---
package main

type S struct{}

func (s S) inc() int {
	return 1
}

func main() {
	s := S{}
	ref := s.inc
	r := &ref
	_ = r
}
