tests/spec/emit/snapshots/interop_aliased_import_type_reference.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import t "go:time"
  
  fn f(x: t.Time) -> t.Duration {
    t.Since(x)
  }
  
  fn main() {
    let _ = f(t.Now())
  }
---
package main

import t "time"

func f(x t.Time) t.Duration {
	return t.Since(x)
}

func main() {
	f(t.Now())
}
